--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>  Accueil Robbie Photographie </title>
+    <title>  Accueil FOUAD HAMIDI Photographie </title>
     <style>
         a{
                                   color: black;   
